# Cortex-Code

./: .adw.yaml  .coverage  .cursorindexingignore  .cxc.yaml  .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  README.md  THIS_IS_A_PACKAGE.FYI  WARP.md  af-script-hub-adw-framework.code-workspace  env.example  pyproject.toml  pytest.ini  refactoring-loss-analysis.json  requirements.md  setup_adw_example.py  setup_cxc_example.py  tmp-refactor-diagnostic-REFINED.json  tmp-refactor-diagnostic-potential-issues.json
.af/: requirements.md
.claude/: project-goals.md  project-map.md
.serena/: project.yml
adw/: __init__.py  agent.py  cli.py  git_ops.py  github.py  workflow_ops.py  worktree_ops.py
commands/: _command_index.yaml  adw-setup.md  analyze_merge_conflict.md  bug.md  chore.md  classify_and_branch.md  classify_cxc.md  cleanup_worktrees.md  cxc-setup.md  document.md  feature.md  generate_branch_name.md  install_worktree.md  patch.md  pull_request.md  review.md  review_bg_iso.md  review_code.md
cxc/: __init__.py  cli.py  mcp_server.py
docs/: C4_ARCHITECTURE.md  MCP_SERVER.md  ORCHESTRATOR_GUIDE.md  REFACTOR_REPORT.md  aaron_demo.md  adw-verification-setup-guide.md  cxc-verification-setup-guide.md  refactoring-loss-analysis.json
specs/: 260106_diagnostic_timing_sdlc.md  CLAUDE.md  adw-test-suite-plan.md  cxc-test-suite-plan.md  mcp-server-implementation-sdlc_planner.md  mcp-server-implementation-sdlc_planner_report.md
temp-architecture/: SPEC.md  class_diagram.mmd  class_diagram.puml  dependencies.mmd  extract_architecture.py  (+2 more)
(+224 files in other folders)
